# rust-parallelism

./: Cargo.toml
src/: 01_threads_basic.rs  02_shared_state.rs  03_channels.rs  04_rayon_data_parallel.rs  05_scoped_threads.rs  Cargo.toml
